--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="center">
         <h1>FREE SKS</h1>
 
-        <a href="https://www.mediafire.com/folder/fwdwl4e7gprvu/SKS+Files">
+        <a href="https://www.mediafire.com/folder/fwdwl4e7gprvu/SKS+Files" target="_blank" rel="noopener noreferrer">
             <button class="btn"><i class="fa fa-download"></i> Download</button>
         </a>
     </div>
