--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="VSuE5my-KEe1HJiUI0N0cxGpZ05fyKLDHCFPJS2jy1s" />
     <title>Free SKS Files</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
