--- a/index.html
+++ b/index.html
@@ -2,22 +2,50 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="google-site-verification" content="VSuE5my-KEe1HJiUI0N0cxGpZ05fyKLDHCFPJS2jy1s" />
-    <title>Free SKS Files</title>
-    <link rel="stylesheet" href="style.css" />
-    <script src="script.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FreeSKS</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div id="center">
-        <h1>FREE SKS</h1>
-
-        <a href="https://www.mediafire.com/folder/fwdwl4e7gprvu/SKS+Files" target="_blank" rel="noopener noreferrer">
-            <button class="btn"><i class="fa fa-download"></i> Download</button>
-        </a>
+    <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #007bff">
+        <a href="#" class="navbar-brand">FreeSKS</a>
+        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse" id="bars">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <div class="navbar-nav">
+                <a href="#" class="nav-item nav-link active">Home</a>
+                <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle active" data-toggle="dropdown">Download</a>
+                    <div class="dropdown-menu">
+                        <a href="http://www.mediafire.com/folder/glcu49zxz7fgn/Mobitel" class="dropdown-item" target="_blank">Mobitel</a>
+                        <div class="dropdown-divider"></div>
+                        <a href="http://www.mediafire.com/folder/vpc54dckuzp9y/Hutch" class="dropdown-item" target="_blank">Hutch</a>
+                        <div class="dropdown-divider"></div>
+                        <a href="http://www.mediafire.com/folder/jd9cf15poje40/SLT" class="dropdown-item" target="_blank">SLT</a>
+                    </div>
+                </div>
+            </div>
+    </nav>
+    <div class="container" style="text-align: center;" id="content">
+        <h1 class="text-dark display-2">FreeSKS</h1>
+        <div class="btn-group">
+            <button type="button" class="btn btn-primary btn-lg dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Download</button>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="http://www.mediafire.com/folder/glcu49zxz7fgn/Mobitel" target="_blank">Mobitel</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="http://www.mediafire.com/folder/vpc54dckuzp9y/Hutch" target="_blank">Hutch</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="http://www.mediafire.com/folder/jd9cf15poje40/SLT" target="_blank">SLT</a>
+            </div>
+        </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </body>
 
 </html>
