--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div class="dropdown-menu">
                         <a href="http://www.mediafire.com/folder/glcu49zxz7fgn/Mobitel" class="dropdown-item" target="_blank">Mobitel</a>
                         <div class="dropdown-divider"></div>
-                        <a href="http://www.mediafire.com/folder/vpc54dckuzp9y/Hutch" class="dropdown-item" target="_blank">Hutch</a>
+                        <a href="http://www.mediafire.com/folder/vpc54dckuzp9y/Hutch" class="dropdown-item disabled" target="_blank">Hutch</a>
                         <div class="dropdown-divider"></div>
                         <a href="http://www.mediafire.com/folder/jd9cf15poje40/SLT" class="dropdown-item" target="_blank">SLT</a>
                     </div>
@@ -32,20 +32,29 @@
     </nav>
     <div class="container" style="text-align: center;" id="content">
         <h1 class="text-dark display-3">FreeSKS</h1>
-        <div class="btn-group">
-            <button type="button" class="btn btn-primary btn-lg dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Download</button>
-            <div class="dropdown-menu">
-                <a class="dropdown-item" href="http://www.mediafire.com/folder/glcu49zxz7fgn/Mobitel" target="_blank">Mobitel</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="http://www.mediafire.com/folder/vpc54dckuzp9y/Hutch" target="_blank">Hutch</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="http://www.mediafire.com/folder/jd9cf15poje40/SLT" target="_blank">SLT</a>
+        <div style="font-family: sans-serif;">
+            <span class="badge badge-pill badge-success">Active Valid for 3 days</span>
+            <span class="badge badge-pill badge-primary">High Speed Connection</span>
+            <span class="badge badge-pill badge-danger">No DDOS</span>
+            <span class="badge badge-pill badge-danger">No Hacking</span>
+            <span class="badge badge-pill badge-danger">No Torrent</span>
+        </div>
+        <br>
+        <div>
+            <div>
+                <button type="button" class="btn btn-primary btn-lg dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Download</button>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="http://www.mediafire.com/folder/glcu49zxz7fgn/Mobitel" target="_blank">Mobitel</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item disabled" href="http://www.mediafire.com/folder/vpc54dckuzp9y/Hutch" target="_blank">Hutch</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="http://www.mediafire.com/folder/jd9cf15poje40/SLT" target="_blank">SLT</a>
+                </div>
             </div>
         </div>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </body>
 
 </html>
