--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #007bff">
-        <a href="#" class="navbar-brand">FreeSKS</a>
+        <span class="navbar-brand mb-0 h1">FreeSKS</span>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse" id="bars">
             <span class="navbar-toggler-icon"></span>
         </button>
