--- a/index.html
+++ b/index.html
@@ -5,56 +5,65 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FreeSKS</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #007bff">
-        <span class="navbar-brand mb-0 h1">FreeSKS</span>
-        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse" id="bars">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <div class="navbar-nav">
-                <a href="#" class="nav-item nav-link active">Home</a>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle active" data-toggle="dropdown">Download</a>
-                    <div class="dropdown-menu">
-                        <a href="http://www.mediafire.com/folder/glcu49zxz7fgn/Mobitel" class="dropdown-item" target="_blank">Mobitel</a>
-                        <div class="dropdown-divider"></div>
-                        <a href="http://www.mediafire.com/folder/vpc54dckuzp9y/Hutch" class="dropdown-item disabled" target="_blank">Hutch</a>
-                        <div class="dropdown-divider"></div>
-                        <a href="http://www.mediafire.com/folder/jd9cf15poje40/SLT" class="dropdown-item" target="_blank">SLT</a>
-                    </div>
-                </div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <div class="container-fluid">
+            <span class="navbar-brand mb-0 h1">FreeSKS</span>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Download
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="http://www.mediafire.com/folder/glcu49zxz7fgn/Mobitel" target="_blank">Mobitel</a></li>
+                            <li><a class="dropdown-item disabled" href="http://www.mediafire.com/folder/vpc54dckuzp9y/Hutch" target="_blank">Hutch</a></li>
+                            <li><a class="dropdown-item" href="http://www.mediafire.com/folder/jd9cf15poje40/SLT" target="_blank">SLT</a></li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
+        </div>
     </nav>
     <div class="container" style="text-align: center;" id="content">
-        <h1 class="text-dark display-3">FreeSKS</h1>
+        <h1 class="display-1" style="font-size: 70px;">FreeSKS</h1>
+        <br>
         <div style="font-family: sans-serif;">
-            <span class="badge badge-pill badge-success">Active Valid for 3 days</span>
-            <span class="badge badge-pill badge-primary">High Speed Connection</span>
-            <span class="badge badge-pill badge-danger">No DDOS</span>
-            <span class="badge badge-pill badge-danger">No Hacking</span>
-            <span class="badge badge-pill badge-danger">No Torrent</span>
+            <span class="badge rounded-pill bg-success">Active Valid for 3 days</span>
+            <span class="badge rounded-pill bg-primary">High Speed Connection</span>
+            <span class="badge rounded-pill bg-danger">No DDOS</span>
+            <span class="badge rounded-pill bg-danger">No Hacking</span>
+            <span class="badge rounded-pill bg-danger">No Torrent</span>
         </div>
         <br>
-        <div>
-            <div>
-                <button type="button" class="btn btn-primary btn-lg dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Download</button>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="http://www.mediafire.com/folder/glcu49zxz7fgn/Mobitel" target="_blank">Mobitel</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item disabled" href="http://www.mediafire.com/folder/vpc54dckuzp9y/Hutch" target="_blank">Hutch</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="http://www.mediafire.com/folder/jd9cf15poje40/SLT" target="_blank">SLT</a>
-                </div>
-            </div>
+        <div class="dropdown">
+            <button class="btn btn-primary dropdown-toggle btn-lg" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                Download
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                <li><a class="dropdown-item" href="http://www.mediafire.com/folder/glcu49zxz7fgn/Mobitel" target="_blank">Mobitel</a></li>
+                <li><a class="dropdown-item disabled" href="http://www.mediafire.com/folder/vpc54dckuzp9y/Hutch" target="_blank">Hutch</a></li>
+                <li><a class="dropdown-item" href="http://www.mediafire.com/folder/jd9cf15poje40/SLT" target="_blank">SLT</a></li>
+            </ul>
         </div>
-        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    </div>
+    </div>
+    </div>
+    <footer id="footer" class="text-light">
+        <small>Copyright © 2021 Hirusha Pramuditha</small>
+    </footer>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 </body>
 
 </html>
