--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
     </nav>
     <div class="container" style="text-align: center;" id="content">
-        <h1 class="display-1" style="font-size: 70px;">FreeSKS</h1>
+        <h1 class="display-1" style="font-size: 60px;">FreeSKS</h1>
         <br>
         <div style="font-family: sans-serif;">
             <span class="badge rounded-pill bg-success">Active Valid for 3 days</span>
@@ -47,7 +47,7 @@
         </div>
         <br>
         <div class="dropdown">
-            <button class="btn btn-primary dropdown-toggle btn-lg" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+            <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                 Download
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
