--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
     </nav>
     <div class="container" style="text-align: center;" id="content">
-        <h1 class="display-1" style="font-size: 60px;">FreeSKS</h1>
+        <h1 class="display-2">FreeSKS</h1>
         <br>
         <div style="font-family: sans-serif;">
             <span class="badge rounded-pill bg-success">Active Valid for 3 days</span>
