Updated form action

--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
     </nav>
     <section>
         <div class="container">
-            <form action="POST" data-netlify="true">
+            <form name="contact" method="POST" data-netlify="true">
                 <h2 align="center">Contact Me</h2>
                 <br>
                 <div class="row g-1">
