--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </div>
     </div>
     </div>
-    <footer id="footer" class="text-light">
+    <footer id="footer" class="text-muted user-select-none">
         <small>Copyright © 2021 Hirusha Pramuditha</small>
     </footer>
     </div>
