--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
             </form>
         </div>
     </section>
-    <footer id="footer" class="text-light">
+    <footer id="footer" class="text-muted user-select-none">
         <small>Copyright © 2021 Hirusha Pramuditha</small>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
