Added sorry alert

--- a/contact.html
+++ b/contact.html
@@ -79,12 +79,12 @@
       </div>
     </nav>
     <div
-      class="alert alert-success alert-dismissible fade show"
+      class="alert alert-warning alert-dismissible fade show"
       role="alert"
       id="alert"
       hidden
     >
-      <strong>Thank you!</strong> Your message has been recieved.
+      Sorry for the inconvenience, this form doesn't work temporarily
       <button
         type="button"
         class="btn-close"
