--- a/contact.html
+++ b/contact.html
@@ -78,23 +78,9 @@
         </div>
       </div>
     </nav>
-    <div
-      class="alert alert-warning alert-dismissible fade show"
-      role="alert"
-      id="alert"
-      hidden
-    >
-      Sorry for the inconvenience, this form doesn't work temporarily
-      <button
-        type="button"
-        class="btn-close"
-        data-bs-dismiss="alert"
-        aria-label="Close"
-      ></button>
-    </div>
     <section>
       <div class="container">
-        <form name="contact" method="POST" data-netlify="true" id="contact">
+        <form name="contact" method="POST" data-netlify="true">
           <h2 align="center">Contact Me</h2>
           <br />
           <div class="row g-1">
@@ -155,7 +141,6 @@
     <footer id="footer" class="text-muted user-select-none">
       <small>Copyright © 2021 Hirusha Pramuditha</small>
     </footer>
-    <script src="main.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
