--- a/contact.html
+++ b/contact.html
@@ -1,150 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
-      crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css" />
     <title>Contact Me</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <div class="container-fluid">
-        <span class="navbar-brand mb-0 h1">FreeSKS</span>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdown"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Download
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li>
-                  <a
-                    class="dropdown-item"
-                    href="http://www.mediafire.com/folder/glcu49zxz7fgn/Mobitel"
-                    target="_blank"
-                    >Mobitel</a
-                  >
-                </li>
-                <li>
-                  <a
-                    class="dropdown-item disabled"
-                    href="http://www.mediafire.com/folder/vpc54dckuzp9y/Hutch"
-                    target="_blank"
-                    >Hutch</a
-                  >
-                </li>
-                <li>
-                  <a
-                    class="dropdown-item"
-                    href="http://www.mediafire.com/folder/jd9cf15poje40/SLT"
-                    target="_blank"
-                    >SLT</a
-                  >
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a href="contact.html" class="nav-link active">Contact Me</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <section>
-      <div class="container">
-        <form name="contact" method="POST" data-netlify="true">
-          <h2 align="center">Contact Me</h2>
-          <br />
-          <div class="row g-1">
-            <div class="form-floating mb-3 col">
-              <input
-                type="text"
-                class="form-control"
-                id="floatingInput"
-                placeholder="Name"
-                name="name"
-                required
-              />
-              <label for="floatingInput">Name</label>
-            </div>
-            <div class="form-floating mb-3 col">
-              <input
-                type="email"
-                class="form-control"
-                id="floatingInput"
-                placeholder="name@example.com"
-                name="email"
-                required
-              />
-              <label for="floatingInput">Email Addres</label>
-            </div>
-          </div>
-          <div class="form-floating mb-3">
-            <input
-              type="text"
-              class="form-control"
-              id="floatingInput"
-              placeholder="Subject"
-              name="subject"
-            />
-            <label for="floatingInput">Subject</label>
-          </div>
-          <div class="form-floating">
-            <textarea
-              class="form-control"
-              placeholder="Message"
-              id="floatingTextarea"
-              style="height: 170px"
-              name="message"
-              rows="6"
-              required
-            ></textarea>
-            <label for="floatingTextarea">Message</label>
-          </div>
-          <br />
-          <div>
-            <button class="btn btn-primary" type="submit" id="submitBtn">
-              Send Message
+        <div class="container-fluid">
+            <span class="navbar-brand mb-0 h1">FreeSKS</span>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
             </button>
-          </div>
-        </form>
-      </div>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Download
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li>
+                                <a class="dropdown-item" href="http://www.mediafire.com/folder/glcu49zxz7fgn/Mobitel" target="_blank">Mobitel</a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item disabled" href="http://www.mediafire.com/folder/vpc54dckuzp9y/Hutch" target="_blank">Hutch</a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="http://www.mediafire.com/folder/jd9cf15poje40/SLT" target="_blank">SLT</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a href="contact.html" class="nav-link active">Contact Me</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="alert alert-warning" role="alert" style="font-size: 110%; text-align: center;">
+        This website is temporarily closed!
+    </div>
+    <section>
+        <div class="container">
+            <form name="contact" method="POST" data-netlify="true">
+                <h2 align="center">Contact Me</h2>
+                <br />
+                <div class="row g-1">
+                    <div class="form-floating mb-3 col">
+                        <input type="text" class="form-control" id="floatingInput" placeholder="Name" name="name" required />
+                        <label for="floatingInput">Name</label>
+                    </div>
+                    <div class="form-floating mb-3 col">
+                        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" name="email" required />
+                        <label for="floatingInput">Email Addres</label>
+                    </div>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="text" class="form-control" id="floatingInput" placeholder="Subject" name="subject" />
+                    <label for="floatingInput">Subject</label>
+                </div>
+                <div class="form-floating">
+                    <textarea class="form-control" placeholder="Message" id="floatingTextarea" style="height: 170px" name="message" rows="6" required></textarea>
+                    <label for="floatingTextarea">Message</label>
+                </div>
+                <br />
+                <div>
+                    <button class="btn btn-primary" type="submit" id="submitBtn">
+                        Send Message
+                    </button>
+                </div>
+            </form>
+        </div>
     </section>
     <footer id="footer" class="text-muted user-select-none">
-      <small>Copyright © 2021 Hirusha Pramuditha</small>
+        <small>Copyright © 2021 Hirusha Pramuditha</small>
     </footer>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+</body>
+
 </html>
