--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                             Download
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="http://www.mediafire.com/folder/glcu49zxz7fgn/Mobitel" target="_blank">Mobitel</a></li>
-                            <li><a class="dropdown-item disabled" href="http://www.mediafire.com/folder/vpc54dckuzp9y/Hutch" target="_blank">Hutch</a></li>
-                            <li><a class="dropdown-item" href="http://www.mediafire.com/folder/jd9cf15poje40/SLT" target="_blank">SLT</a></li>
+                            <li><a class="dropdown-item" href="#">Mobitel</a></li>
+                            <li><a class="dropdown-item disabled" href="#">Hutch</a></li>
+                            <li><a class="dropdown-item" href="#">SLT</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -39,6 +39,9 @@
             </div>
         </div>
     </nav>
+    <div class="alert alert-warning" role="alert" style="font-size: 110%; text-align: center;">
+        This website is temporarily closed!
+    </div>
     <div class="container" style="text-align: center;" id="content">
         <h1 class="display-1">FreeSKS</h1>
         <br>
@@ -55,9 +58,9 @@
                 Download
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                <li><a class="dropdown-item" href="http://www.mediafire.com/folder/glcu49zxz7fgn/Mobitel" target="_blank">Mobitel</a></li>
-                <li><a class="dropdown-item disabled" href="http://www.mediafire.com/folder/vpc54dckuzp9y/Hutch" target="_blank">Hutch</a></li>
-                <li><a class="dropdown-item" href="http://www.mediafire.com/folder/jd9cf15poje40/SLT" target="_blank">SLT</a></li>
+                <li><a class="dropdown-item" href="#">Mobitel</a></li>
+                <li><a class="dropdown-item disabled" href="#">Hutch</a></li>
+                <li><a class="dropdown-item" href="#">SLT</a></li>
             </ul>
         </div>
     </div>
