--- a/index.html
+++ b/index.html
@@ -1,140 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>FreeSKS</title>
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
-            crossorigin="anonymous"
-        />
-        <link rel="stylesheet" href="style.css" />
-        <script
-            data-ad-client="ca-pub-7116674489981836"
-            async
-            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
-        ></script>
-    </head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>FreeSKS</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <script
+      data-ad-client="ca-pub-7116674489981836"
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+    ></script>
+  </head>
 
-    <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-            <div class="container-fluid">
-                <span class="navbar-brand mb-0 h1">FreeSKS</span>
-                <button
-                    class="navbar-toggler"
-                    type="button"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent"
-                    aria-expanded="false"
-                    aria-label="Toggle navigation"
-                >
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div
-                    class="collapse navbar-collapse"
-                    id="navbarSupportedContent"
-                >
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a
-                                class="nav-link active"
-                                aria-current="page"
-                                href="#"
-                                >Home</a
-                            >
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a
-                                class="nav-link dropdown-toggle"
-                                href="#"
-                                id="navbarDropdown"
-                                role="button"
-                                data-bs-toggle="dropdown"
-                                aria-expanded="false"
-                            >
-                                Download
-                            </a>
-                            <ul
-                                class="dropdown-menu"
-                                aria-labelledby="navbarDropdown"
-                            >
-                                <li>
-                                    <a class="dropdown-item" href="#"
-                                        >Mobitel</a
-                                    >
-                                </li>
-                                <li>
-                                    <a class="dropdown-item disabled" href="#"
-                                        >Hutch</a
-                                    >
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="#">SLT</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a href="contact.html" class="nav-link"
-                                >Contact Me</a
-                            >
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <div
-            class="alert alert-warning"
-            role="alert"
-            style="font-size: 110%; text-align: center"
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+      <div class="container-fluid">
+        <span class="navbar-brand mb-0 h1">FreeSKS</span>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
         >
-            This website is temporarily closed!
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Download
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li>
+                  <a class="dropdown-item" href="#">Mobitel</a>
+                </li>
+                <li>
+                  <a class="dropdown-item disabled" href="#">Hutch</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">SLT</a>
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a href="contact.html" class="nav-link">Contact Me</a>
+            </li>
+          </ul>
         </div>
-        <div class="container" style="text-align: center" id="content">
-            <h1 class="display-1">FreeSKS</h1>
-            <br />
-            <div style="font-family: sans-serif">
-                <span class="badge rounded-pill bg-success"
-                    >Active Valid for 3 days</span
-                >
-                <span class="badge rounded-pill bg-primary"
-                    >High Speed Connection</span
-                >
-                <span class="badge rounded-pill bg-danger">No DDOS</span>
-                <span class="badge rounded-pill bg-danger">No Hacking</span>
-                <span class="badge rounded-pill bg-danger">No Torrent</span>
-            </div>
-            <br />
-            <div class="dropdown">
-                <button
-                    class="btn btn-primary dropdown-toggle"
-                    type="button"
-                    id="dropdownMenuButton1"
-                    data-bs-toggle="dropdown"
-                    aria-expanded="false"
-                >
-                    Download
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                    <li><a class="dropdown-item" href="#">Mobitel</a></li>
-                    <li>
-                        <a class="dropdown-item disabled" href="#">Hutch</a>
-                    </li>
-                    <li><a class="dropdown-item" href="#">SLT</a></li>
-                </ul>
-            </div>
-        </div>
-        <div>
-            <footer id="footer" class="text-muted user-select-none">
-                <small>Copyright © 2021 Hirusha Pramuditha</small>
-            </footer>
-        </div>
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-            crossorigin="anonymous"
-        ></script>
-    </body>
+      </div>
+    </nav>
+    <div
+      class="alert alert-warning"
+      role="alert"
+      style="font-size: 110%; text-align: center"
+    >
+      This website is temporarily closed!
+    </div>
+    <div class="container" style="text-align: center" id="content">
+      <h1 class="display-1">FreeSKS</h1>
+      <br />
+      <div style="font-family: sans-serif">
+        <span class="badge rounded-pill bg-success"
+          >Active Valid for 3 days</span
+        >
+        <span class="badge rounded-pill bg-primary">High Speed Connection</span>
+        <span class="badge rounded-pill bg-danger">No DDOS</span>
+        <span class="badge rounded-pill bg-danger">No Hacking</span>
+        <span class="badge rounded-pill bg-danger">No Torrent</span>
+      </div>
+      <br />
+      <div class="dropdown">
+        <button
+          class="btn btn-primary dropdown-toggle"
+          type="button"
+          id="dropdownMenuButton1"
+          data-bs-toggle="dropdown"
+          aria-expanded="false"
+        >
+          Download
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+          <li><a class="dropdown-item" href="#">Mobitel</a></li>
+          <li>
+            <a class="dropdown-item disabled" href="#">Hutch</a>
+          </li>
+          <li><a class="dropdown-item" href="#">SLT</a></li>
+        </ul>
+      </div>
+    </div>
+    <div>
+      <footer id="footer" class="text-muted user-select-none">
+        <small>Copyright © 2021 Hirusha Pramuditha</small>
+      </footer>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
