--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </div>
     <div>
       <footer id="footer" class="text-muted user-select-none">
-        <small>Copyright © 2021 Hirusha Pramuditha</small>
+        <small>Copyright © 2021 freesks.tk</small>
       </footer>
     </div>
     <script
