--- a/contact.html
+++ b/contact.html
@@ -146,7 +146,7 @@
       </div>
     </section>
     <footer id="footer" class="text-muted user-select-none">
-      <small>Copyright © 2021 Hirusha Pramuditha</small>
+      <small>Copyright © 2021 freesks.tk</small>
     </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
